[package]
name = "solitons_ordertwo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.4"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rayon = "1.7.0"
image = {version = "0.24.6", features = ["gif"]}
